fix scrollbar and dialog close

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,6 +60,7 @@
   }
   body {
     @apply bg-background text-foreground font-sans box-border antialiased min-h-screen flex flex-col;
+    overflow-y: overlay;
   }
 }
 
